<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorAccent"
              android:textColor="@color/colorPrimaryDark">
    <LinearLayout
            android:layout_width="match_parent"
            android:fontFamily="@font/baloo_regular"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_regular"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:background="@drawable/layoutstyle">
            <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:rowCount="1"
                    android:columnCount="3"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="start"
                        android:drawableStart="@drawable/upload"
                        android:background="@color/colorAccent"/>
                <TextView
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:fontFamily="@font/baloo_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_client"/>
            </GridLayout>
            <android.support.v7.widget.CardView
                    android:id="@+id/editText2_card"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:elevation="1dp"
                    android:innerRadius="0dp"
                    android:thicknessRatio="1.9"
                    android:layout_margin="8dp">
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary">
                    <EditText
                            android:background="@drawable/buttonstyle"
                            android:textSize="20sp"
                            android:id="@+id/inputFirstName"
                            android:padding="8dp"
                            android:fontFamily="@font/baloo_regular"
                            android:textColor="@color/colorPrimaryDark"
                            android:textColorHint="@color/colorPrimaryDark"
                            android:hint="@string/firstNameHint"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                    android:id="@+id/editText_card"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:elevation="1dp"
                    android:innerRadius="0dp"
                    android:thicknessRatio="1.9"
                    android:layout_margin="8dp">
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:layout_gravity="center"
                        android:gravity="center">
                    <EditText
                            android:background="@drawable/buttonstyle"
                            android:textSize="20sp"
                            android:id="@+id/inputLastName"
                            android:padding="8dp"
                            android:gravity="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:hint="@string/lastNameHint"
                            android:textColorHint="@color/colorPrimaryDark"
                            android:fontFamily="@font/baloo_regular"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:elevation="1dp"
                    android:innerRadius="0dp"
                    android:thicknessRatio="1.9"
                    android:layout_margin="8dp">
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:layout_gravity="center"
                        android:gravity="center">
                    <EditText
                            android:background="@drawable/buttonstyle"
                            android:textSize="20sp"
                            android:id="@+id/inputCity"
                            android:padding="8dp"
                            android:gravity="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:hint="@string/city"
                            android:textColorHint="@color/colorPrimaryDark"
                            android:fontFamily="@font/baloo_regular"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:elevation="1dp"
                    android:innerRadius="0dp"
                    android:thicknessRatio="1.9"
                    android:layout_margin="8dp">
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:layout_gravity="center"
                        android:gravity="center">
                    <EditText
                            android:background="@drawable/buttonstyle"
                            android:textSize="20sp"
                            android:id="@+id/inputPostCode"
                            android:padding="8dp"
                            android:gravity="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:hint="@string/postcode"
                            android:textColorHint="@color/colorPrimaryDark"
                            android:fontFamily="@font/baloo_regular"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:elevation="1dp"
                    android:innerRadius="0dp"
                    android:thicknessRatio="1.9"
                    android:layout_margin="8dp">
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:layout_gravity="center"
                        android:gravity="center">
                    <EditText
                            android:background="@drawable/buttonstyle"
                            android:textSize="20sp"
                            android:id="@+id/inputStreet"
                            android:padding="8dp"
                            android:gravity="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:hint="@string/street"
                            android:textColorHint="@color/colorPrimaryDark"
                            android:fontFamily="@font/baloo_regular"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:elevation="1dp"
                    android:innerRadius="0dp"
                    android:thicknessRatio="1.9"
                    android:layout_margin="8dp">
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:layout_gravity="center"
                        android:gravity="center">
                    <EditText
                            android:background="@drawable/buttonstyle"
                            android:textSize="20sp"
                            android:id="@+id/inputNumber"
                            android:padding="8dp"
                            android:gravity="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:hint="@string/number"
                            android:textColorHint="@color/colorPrimaryDark"
                            android:fontFamily="@font/baloo_regular"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center">
                <Button
                        android:id="@+id/BtnSave"
                        android:layout_gravity="center"
                        android:fontFamily="@font/baloo_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:onClick="addClient"
                        android:textColor="@color/colorAccent"
                        android:background="@color/colorPrimaryDark"
                        android:layout_margin="16dp"
                        android:text="@string/save"/>
                <Button
                        android:id="@+id/btnBack"
                        android:layout_gravity="center"
                        android:fontFamily="@font/baloo_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:onClick="back"
                        android:textColor="@color/colorAccent"
                        android:background="@color/colorPrimaryDark"
                        android:layout_margin="16dp"
                        android:text="@string/back"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>